--- a/app/src/main/res/layout/student.xml
+++ b/app/src/main/res/layout/student.xml
@@ -22,7 +22,7 @@
         tools:layout_editor_absoluteY="248dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnJoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Join Session"
