--- a/app/src/main/res/layout/admin.xml
+++ b/app/src/main/res/layout/admin.xml
@@ -23,6 +23,7 @@
 
     <Button
         android:id="@+id/button"
+        android:onClick="list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start Session"
