--- a/app/src/main/res/layout/student.xml
+++ b/app/src/main/res/layout/student.xml
@@ -29,5 +29,10 @@
         android:textAlignment="center"
         android:textSize="24sp" />
 
+    <Button
+        android:id="@+id/showAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/showAll" />
 
 </LinearLayout>
