--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -12,12 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:background="@android:color/transparent"
         android:ems="10"
         android:hint="Enter Your Academic Number"
-        android:background="@android:color/transparent"
-        android:textColorHint="#ffffff"
         android:inputType="textPassword"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+        android:maxLength="7" />
 
     <Button
         android:id="@+id/enter"
@@ -59,7 +61,7 @@
         android:layout_marginBottom="12dp"
         android:background="@android:color/transparent"
         android:text="Contact The Lecturer If Wrong Academic Number Was Entered"
-        android:textColor="#ffffff"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textColor="#ffffff" />
 
 </RelativeLayout>
