--- a/app/src/main/res/layout/student.xml
+++ b/app/src/main/res/layout/student.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/gradient_list"
+    android:background="#303030"
     android:id="@+id/layout"
     android:gravity="center"
     android:orientation="vertical"
@@ -21,7 +21,7 @@
         android:fontFamily="@font/fedra"
         android:text="@string/label_text"
         android:textAlignment="center"
-        android:textColor="#FF0E1640"
+        android:textColor="#ffffff"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="0dp"
